--- a/death-ray-portlet/.classpath
+++ b/death-ray-portlet/.classpath
@@ -18,5 +18,13 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-client-1.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-client-meta-1.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-core-1.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-docs-3.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-docs-meta-3.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-media-1.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-spreadsheet-3.0.jar"/>
+	<classpathentry kind="lib" path="docroot/WEB-INF/lib/gdata-spreadsheet-meta-3.0.jar"/>
 	<classpathentry kind="output" path="docroot/WEB-INF/classes"/>
 </classpath>
